docs: 同步 PRD/规格/ADR/架构/API 与协作规则
- PRD 登记 FR-10~14 需求与验收标准；specs 新增取证/region/Velocity/MCP/集成规格
- ADR 0015~0027 记录业务桥/取证/region/Velocity/Arthas 决策
- API/ARCHITECTURE/OPERATIONS/wiki 同步新能力；CHANGELOG 未发布段累积
- .claude/rules 更新架构不变量与范围纪律